<resources>
    <string name="app_name">Device</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dhome">DHome</string>
    <string name="device_id_12345">Device ID: 12345</string>
    <string name="_12345">#12345</string>
    <string name="open_device">Open Device</string>
    <string name="lock_device">Lock Device</string>
    <string name="battery_83">Battery: 83%</string>
    <string name="owner_john_smith">Owner: John Smith</string>
    <string name="status_parcel_ready">STATUS: PARCEL READY</string>
</resources>