<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cee1f4"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_dhome"
        android:layout_width="178dp"
        android:layout_height="52dp"
        android:textStyle="bold"
        android:gravity="start"
        android:text="@string/dhome"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/button_open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/textview_info1"
        android:layout_width="273dp"
        android:layout_height="46dp"
        android:gravity="start"
        android:textStyle="bold"
        android:text="@string/device_id_12345"
        android:textAlignment="viewStart"
        android:textColor="#0660bd"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <TextView
        android:id="@+id/textview_info2"
        android:layout_width="281dp"
        android:layout_height="43dp"
        android:gravity="start"
        android:textStyle="bold"
        android:text="@string/owner_john_smith"
        android:textAlignment="viewStart"
        android:textColor="#0660bd"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <TextView
        android:id="@+id/textview_info3"
        android:layout_width="249dp"
        android:layout_height="54dp"
        android:gravity="start"
        android:text="@string/battery_83"
        android:textAlignment="viewStart"
        android:textColor="#0660bd"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569" />

    <TextView
        android:id="@+id/textview_id"
        android:layout_width="96dp"
        android:layout_height="49dp"
        android:gravity="start"
        android:text="@string/_12345"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/button_open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <TextView
        android:id="@+id/textview_status"
        android:layout_width="365dp"
        android:layout_height="38dp"
        android:gravity="start"
        android:text="STATUS:       PARCEL READY"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <Button
        android:id="@+id/button_open"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginBottom="128dp"
        android:text="@string/open_device"
        android:background="#0660bd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/button_close"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginBottom="76dp"
        android:text="@string/lock_device"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_open"
        app:layout_constraintVertical_bias="0.65" />
</androidx.constraintlayout.widget.ConstraintLayout>